--- a/.eslintrc
+++ b/.eslintrc
@@ -54,7 +54,7 @@ rules:
   consistent-return: 0
   curly:
     - 2
-    - all
+    - multi-line
   default-case: 0
   dot-notation: 2
   dot-location:
@@ -166,8 +166,8 @@ rules:
     - declaration
   indent:
     - 2
-    - 4
-    - SwitchCase: 4
+    - 2
+    - SwitchCase: 1
   key-spacing:
     - 2
     - beforeColon: false
@@ -175,7 +175,7 @@ rules:
   lines-around-comment: 0
   linebreak-style:
     - 2
-    - unix
+    - windows
   max-nested-callbacks: 0
   new-cap: 2
   new-parens: 2
@@ -212,7 +212,7 @@ rules:
     - never
   quote-props:
     - 2
-    - as-needed
+    - always
   quotes:
     - 2
     - single
@@ -233,7 +233,7 @@ rules:
     - always
   space-before-function-paren:
     - 2
-    - never
+    - always
   space-in-parens:
     - 2
     - never
