--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,16 @@ node_modules/
 hooks/
 platforms/
 plugins/
-resources/
+resources/android/icon
+resources/android/splash
+resources/ios/icon
+resources/ios/splash
+resources/wp8/splash
+resources/wp8/icon
 scss/
 .bowerrc
 bower.json
+
 gulpfile.js
 .idea
 
