removed ionic-platform-web-client

--- a/.io-config.json
+++ b/.io-config.json
@@ -1,1 +1,1 @@
-{"dev_push":true,"app_id":"fbd0e989","api_key":"d4b28374bae253a25d1ead686de5a9026a4e195883da7e1a"}
+{"app_id":"fbd0e989","api_key":"d4b28374bae253a25d1ead686de5a9026a4e195883da7e1a"}
