--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "ionic-plugin-deploy",
     "ionic-plugin-keyboard",
     "cordova-plugin-device-orientation",
-    "cordova-plugin-device-motion"
+    "cordova-plugin-device-motion",
+    "cordova-plugin-screen-orientation"
   ],
   "cordovaPlatforms": [
     "android",
