--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Strabo Mobile",
+  "name": "StraboSpot",
   "version": "0.18.8",
-  "description": "Strabo Mobile: An app for Structural Geology and Tectonics (SG&T)",
+  "description": "StraboSpot: An app for Structural Geology and Tectonics (SG&T)",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
