--- a/package.json
+++ b/package.json
@@ -1,48 +1,98 @@
 {
-  "name": "StraboSpot",
-  "version": "0.24.1",
-  "description": "StraboSpot: An app for Structural Geology and Tectonics (SG&T)",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^1.3.3",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.4.7",
-    "bower": "^1.3.3",
-    "eslint": "^1.6.0",
-    "eslint-config-angular": "^0.4.0",
-    "eslint-plugin-angular": "^0.12.0",
-    "gulp-util": "^2.2.14",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.10",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.6",
-    "shelljs": "^0.3.0"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-camera",
-    "cordova-plugin-console",
-    "cordova-plugin-device",
-    "cordova-plugin-file",
-    "cordova-plugin-filepath",
-    "cordova-plugin-geolocation",
-    "cordova-plugin-inappbrowser",
-    "cordova-plugin-network-information",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-whitelist",
-    "cordova-sqlite-storage@0.7.14",
-    "ionic-plugin-deploy",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-device-orientation",
-    "cordova-plugin-device-motion"
-  ],
-  "cordovaPlatforms": [
-    "android",
-    "ios"
-  ]
+    "name": "StraboSpot",
+    "version": "0.24.2",
+    "description": "StraboSpot: An app for Structural Geology and Tectonics (SG&T)",
+    "dependencies": {
+        "cordova-android": "~6.2.3",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-console": "^1.0.2",
+        "cordova-plugin-device": "^1.1.1",
+        "cordova-plugin-device-motion": "^1.2.1",
+        "cordova-plugin-device-orientation": "^1.0.3",
+        "cordova-plugin-file": "^4.1.1",
+        "cordova-plugin-filepath": "^1.0.2",
+        "cordova-plugin-geolocation": "^2.4.1",
+        "cordova-plugin-inappbrowser": "^1.5.0",
+        "cordova-plugin-network-information": "^1.2.0",
+        "cordova-plugin-splashscreen": "^3.2.1",
+        "cordova-plugin-statusbar": "^2.1.3",
+        "cordova-plugin-whitelist": "^1.2.1",
+        "cordova-sqlite-storage": "^0.7.14",
+        "gulp": "^3.5.6",
+        "gulp-concat": "^2.2.0",
+        "gulp-minify-css": "^0.3.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-sass": "^1.3.3",
+        "ionic-plugin-keyboard": "^2.0.1"
+    },
+    "devDependencies": {
+        "@ionic/cli-plugin-cordova": "1.5.0",
+        "@ionic/cli-plugin-ionic1": "2.1.0",
+        "angular-mocks": "^1.4.7",
+        "bower": "^1.3.3",
+        "eslint": "^1.6.0",
+        "eslint-config-angular": "^0.4.0",
+        "eslint-plugin-angular": "^0.12.0",
+        "gulp-util": "^2.2.14",
+        "ionic": "3.6.0",
+        "jasmine-core": "^2.3.4",
+        "karma": "^0.13.10",
+        "karma-chrome-launcher": "^0.2.1",
+        "karma-firefox-launcher": "^0.1.6",
+        "karma-jasmine": "^0.3.6",
+        "shelljs": "^0.3.0"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-camera",
+        "cordova-plugin-console",
+        "cordova-plugin-device",
+        "cordova-plugin-file",
+        "cordova-plugin-filepath",
+        "cordova-plugin-geolocation",
+        "cordova-plugin-inappbrowser",
+        "cordova-plugin-network-information",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-whitelist",
+        "cordova-sqlite-storage@0.7.14",
+        "ionic-plugin-deploy",
+        "ionic-plugin-keyboard",
+        "cordova-plugin-device-orientation",
+        "cordova-plugin-device-motion"
+    ],
+    "cordovaPlatforms": [
+        "android",
+        "ios"
+    ],
+    "cordova": {
+        "platforms": [
+            "android",
+            "ios"
+        ],
+        "plugins": {
+            "cordova-plugin-camera": {
+                "CAMERA_USAGE_DESCRIPTION": "The strabospot app uses the camera to add images to field-collected sample data.",
+                "NSPHOTOLIBRARYUSAGEDESCRIPTIONENTRY": "Access my photo library.",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": "The strabospot app uses the photo library to add images to field-collected sample data."
+            },
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-device-motion": {},
+            "cordova-plugin-device-orientation": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-filepath": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": " "
+            },
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-sqlite-storage": {},
+            "ionic-plugin-keyboard": {}
+        }
+    }
 }
