--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.24.5",
     "description": "StraboSpot: An app for Structural Geology and Tectonics (SG&T)",
     "dependencies": {
+        "com.verso.cordova.clipboard": "https://github.com/VersoSolutions/CordovaClipboard",
         "cordova-android": "~6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-camera": "^2.4.1",
@@ -15,6 +16,7 @@
         "cordova-plugin-filepath": "^1.0.2",
         "cordova-plugin-geolocation": "^2.4.1",
         "cordova-plugin-inappbrowser": "^1.5.0",
+        "cordova-plugin-itunesfilesharing": "0.0.1",
         "cordova-plugin-network-information": "^1.2.0",
         "cordova-plugin-splashscreen": "^3.2.1",
         "cordova-plugin-statusbar": "^2.1.3",
@@ -92,7 +94,9 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "cordova-sqlite-storage": {},
-            "ionic-plugin-keyboard": {}
+            "com.verso.cordova.clipboard": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-itunesfilesharing": {}
         }
     }
 }
