--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,14 @@
 {
   "name": "StraboSpot",
   "app_id": "53a3aee8",
-  "type": "ionic1"
+  "type": "ionic1",
+  "integrations": {
+    "cordova": {}
+  },
+  "watchPatterns": [
+    "scss/**/*",
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
+  ]
 }
