--- a/package.json
+++ b/package.json
@@ -1,44 +1,40 @@
 {
     "name": "StraboSpot",
     "version": "1.2.0",
-    "description": "StraboSpot: An app for Structural Geology and Tectonics (SG&T)",
+    "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
-        "com.verso.cordova.clipboard": "https://github.com/VersoSolutions/CordovaClipboard",
-        "cordova-android": "~6.2.3",
+        "cordova-android": "6.2.3",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-camera": "^2.4.1",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.2",
-        "cordova-plugin-device": "^1.1.1",
-        "cordova-plugin-device-motion": "^1.2.1",
-        "cordova-plugin-device-orientation": "^1.0.3",
-        "cordova-plugin-file": "^4.1.1",
+        "cordova-plugin-camera": "^4.0.3",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-device-motion": "^1.2.5",
+        "cordova-plugin-device-orientation": "^2.0.1",
+        "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-filepath": "^1.0.2",
-        "cordova-plugin-geolocation": "^2.4.1",
-        "cordova-plugin-inappbrowser": "^1.5.0",
+        "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-inappbrowser": "^1.7.2",
+        "cordova-plugin-ionic-keyboard": "^2.1.2",
+        "cordova-plugin-ionic-webview": "1.2.1",
         "cordova-plugin-itunesfilesharing": "0.0.1",
-        "cordova-plugin-network-information": "^1.2.0",
-        "cordova-plugin-splashscreen": "^3.2.1",
-        "cordova-plugin-statusbar": "^2.1.3",
-        "cordova-plugin-whitelist": "^1.2.1",
+        "cordova-plugin-network-information": "^2.0.1",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
         "cordova-sqlite-storage": "^0.7.14",
         "gulp": "^3.5.6",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^1.3.3",
-        "ionic-plugin-keyboard": "^2.0.1"
+        "org.strabospot.clipboard": "https://github.com/StraboSpot/clipboard_plugin"
     },
     "devDependencies": {
-        "@ionic/cli-plugin-cordova": "1.5.0",
-        "@ionic/cli-plugin-ionic1": "2.1.0",
         "angular-mocks": "^1.4.7",
         "bower": "^1.3.3",
         "eslint": "^1.6.0",
         "eslint-config-angular": "^0.4.0",
         "eslint-plugin-angular": "^0.12.0",
         "gulp-util": "^2.2.14",
-        "ionic": "3.6.0",
         "jasmine-core": "^2.3.4",
         "karma": "^0.13.10",
         "karma-chrome-launcher": "^0.2.1",
@@ -74,29 +70,22 @@
             "ios"
         ],
         "plugins": {
-            "cordova-plugin-camera": {
-                "CAMERA_USAGE_DESCRIPTION": "The strabospot app uses the camera to add images to field-collected sample data.",
-                "NSPHOTOLIBRARYUSAGEDESCRIPTIONENTRY": "Access my photo library.",
-                "PHOTOLIBRARY_USAGE_DESCRIPTION": "The strabospot app uses the photo library to add images to field-collected sample data."
-            },
-            "cordova-plugin-console": {},
+            "cordova-plugin-camera": {},
             "cordova-plugin-device": {},
             "cordova-plugin-device-motion": {},
             "cordova-plugin-device-orientation": {},
             "cordova-plugin-file": {},
             "cordova-plugin-filepath": {},
-            "cordova-plugin-geolocation": {
-                "GEOLOCATION_USAGE_DESCRIPTION": " "
-            },
+            "cordova-plugin-geolocation": {},
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "cordova-sqlite-storage": {},
-            "com.verso.cordova.clipboard": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-itunesfilesharing": {}
+            "cordova-plugin-itunesfilesharing": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "io.phasr.cordova.plugin.itunesfilesharing": {}
         }
     }
 }
