--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
     "version": "1.2.0",
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
-        "cordova-android": "6.2.3",
-        "cordova-ios": "^4.4.0",
+        "cordova-android": "7.0.0",
+        "cordova-ios": "~4.5.4",
         "cordova-plugin-camera": "^4.0.3",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-device-motion": "^1.2.5",
         "cordova-plugin-device-orientation": "^2.0.1",
-        "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-filepath": "^1.0.2",
-        "cordova-plugin-geolocation": "^2.4.3",
-        "cordova-plugin-inappbrowser": "^1.7.2",
+        "cordova-plugin-geolocation": "^4.0.1",
+        "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
-        "cordova-plugin-ionic-webview": "1.2.1",
+        "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-itunesfilesharing": "0.0.1",
         "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-sqlite-storage": "^0.7.14",
+        "cordova-sqlite-storage": "^2.3.2",
         "gulp": "^3.5.6",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
@@ -42,28 +42,6 @@
         "karma-jasmine": "^0.3.6",
         "shelljs": "^0.3.0"
     },
-    "cordovaPlugins": [
-        "cordova-plugin-camera",
-        "cordova-plugin-console",
-        "cordova-plugin-device",
-        "cordova-plugin-file",
-        "cordova-plugin-filepath",
-        "cordova-plugin-geolocation",
-        "cordova-plugin-inappbrowser",
-        "cordova-plugin-network-information",
-        "cordova-plugin-splashscreen",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-whitelist",
-        "cordova-sqlite-storage@0.7.14",
-        "ionic-plugin-deploy",
-        "ionic-plugin-keyboard",
-        "cordova-plugin-device-orientation",
-        "cordova-plugin-device-motion"
-    ],
-    "cordovaPlatforms": [
-        "android",
-        "ios"
-    ],
     "cordova": {
         "platforms": [
             "android",
@@ -78,14 +56,16 @@
             "cordova-plugin-filepath": {},
             "cordova-plugin-geolocation": {},
             "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-itunesfilesharing": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "cordova-sqlite-storage": {},
-            "cordova-plugin-itunesfilesharing": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "io.phasr.cordova.plugin.itunesfilesharing": {}
+            "io.phasr.cordova.plugin.itunesfilesharing": {},
+            "org.strabospot.clipboard": {}
         }
     }
 }
