--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-sqlite-storage": "^2.3.2",
+        "cordova-sqlite-evcore-extbuild-free": "^0.9.7",
         "gulp": "^3.5.6",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
@@ -63,7 +63,7 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "cordova-sqlite-storage": {},
+            "cordova-sqlite-evcore-extbuild-free": {},
             "io.phasr.cordova.plugin.itunesfilesharing": {},
             "org.strabospot.clipboard": {}
         }
