--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.4.1",
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
+        "@ionic/v1-toolkit": "^1.0.4",
         "cordova-android": "7.0.0",
         "cordova-ios": "~4.5.4",
         "cordova-plugin-camera": "^4.0.3",
@@ -31,7 +32,7 @@
     "devDependencies": {
         "angular-mocks": "^1.4.7",
         "bower": "^1.3.3",
-        "eslint": "^1.6.0",
+        "eslint": "^1.10.3",
         "eslint-config-angular": "^0.4.0",
         "eslint-plugin-angular": "^0.12.0",
         "gulp-util": "^2.2.14",
