--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^1.3.3",
+        "list": "^2.0.13",
         "org.strabospot.clipboard": "https://github.com/StraboSpot/clipboard_plugin"
     },
     "devDependencies": {
