--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-zip": "~3.1.0",
         "cordova-sqlite-evcore-extbuild-free": "^0.9.7",
         "gulp": "^3.5.6",
         "gulp-concat": "^2.2.0",
