--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-plugin-zip": "~3.1.0",
         "cordova-sqlite-evcore-extbuild-free": "^0.9.7",
+        "cordova.plugins.diagnostic": "^3.9.2",
         "gulp": "^3.5.6",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
@@ -70,7 +71,8 @@
             "io.phasr.cordova.plugin.itunesfilesharing": {},
             "org.strabospot.clipboard": {},
             "cordova-plugin-zip": {},
-            "cordova-plugin-file-transfer": {}
+            "cordova-plugin-file-transfer": {},
+            "cordova.plugins.diagnostic": {}
         }
     }
 }
