--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "1.5.0",
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
-        "@ionic/v1-toolkit": "^1.0.4",
-        "cordova-android": "7.0.0",
+        "@ionic/v1-toolkit": "^1.0.5",
+        "cordova-android": "^7.0.0",
         "cordova-ios": "~4.5.4",
         "cordova-plugin-camera": "^4.0.3",
         "cordova-plugin-device": "^2.0.2",
@@ -30,6 +30,8 @@
         "org.strabospot.clipboard": "https://github.com/StraboSpot/clipboard_plugin"
     },
     "devDependencies": {
+        "@ionic/cli-plugin-cordova": "1.6.2",
+        "@ionic/cli-plugin-ionic1": "2.1.1",
         "angular-mocks": "^1.4.7",
         "bower": "^1.3.3",
         "eslint": "^1.10.3",
