--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "version": "1.6.0",
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
-        "@ionic/v1-toolkit": "^1.0.5",
-        "cordova-android": "^7.0.0",
-        "cordova-ios": "~4.5.4",
+        "@ionic/pro": "^2.0.3",
+        "@ionic/v1-toolkit": "^1.0.10",
         "cordova-plugin-camera": "^4.0.3",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-device-motion": "^1.2.5",
