--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "version": "1.6.1",
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
-        "@ionic/pro": "^2.0.3",
-        "@ionic/v1-toolkit": "^1.0.10",
+        "@ionic/v1-toolkit": "^1.0.12",
         "cordova-plugin-camera": "^4.0.3",
         "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-device-motion": "^1.2.5",
+        "cordova-plugin-device-motion": "^2.0.1",
         "cordova-plugin-device-orientation": "^2.0.1",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
@@ -15,17 +14,17 @@
         "cordova-plugin-geolocation": "^4.0.1",
         "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
-        "cordova-plugin-ionic-webview": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^2.2.3",
         "cordova-plugin-itunesfilesharing": "0.0.2",
         "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-plugin-zip": "~3.1.0",
-        "cordova-sqlite-evcore-extbuild-free": "^0.9.8",
-        "cordova-sqlite-storage": "^2.5.0",
+        "cordova-sqlite-evcore-extbuild-free": "^0.9.9",
+        "cordova-sqlite-storage": "^2.5.1",
+        "gulp-clean-css": "^3.10.0",
         "gulp-concat": "^2.6.1",
-        "gulp-minify-css": "1.2.4",
         "gulp-rename": "^1.4.0",
         "org.strabospot.clipboard": "https://github.com/StraboSpot/clipboard_plugin"
     },
@@ -51,10 +50,7 @@
         "ionic_generate_source_map": true
     },
     "cordova": {
-        "platforms": [
-            "android",
-            "ios"
-        ],
+        "platforms": [],
         "plugins": {
             "cordova-plugin-camera": {},
             "cordova-plugin-device": {},
@@ -62,22 +58,19 @@
             "cordova-plugin-device-orientation": {},
             "cordova-plugin-file": {},
             "cordova-plugin-filepath": {},
+            "cordova-plugin-file-transfer": {},
             "cordova-plugin-geolocation": {},
             "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-ionic-webview": {
-                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-            },
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-ionic-webview": {},
             "cordova-plugin-itunesfilesharing": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "cordova-sqlite-evcore-extbuild-free": {},
-            "org.strabospot.clipboard": {},
             "cordova-plugin-zip": {},
-            "cordova-plugin-file-transfer": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-evcore-extbuild-free": {},
+            "cordova-sqlite-storage": {},
+            "org.strabospot.clipboard": {}
         }
     }
 }
