--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-plugin-zip": "~3.1.0",
-        "cordova-sqlite-evcore-extbuild-free": "^0.9.9",
-        "cordova-sqlite-storage": "^2.5.1",
+        "cordova-sqlite-storage": "2.6.0",
         "gulp-clean-css": "^3.10.0",
         "gulp-concat": "^2.6.1",
         "gulp-rename": "^1.4.0",
@@ -68,9 +66,7 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-zip": {},
-            "cordova-sqlite-evcore-extbuild-free": {},
-            "cordova-sqlite-storage": {},
-            "org.strabospot.clipboard": {}
+            "cordova-sqlite-storage": {}
         }
     }
 }
