--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
         "@ionic/v1-toolkit": "^1.0.12",
+        "cordova-android": "7.1.4",
+        "cordova-ios": "4.5.5",
         "cordova-plugin-camera": "^4.0.3",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-device-motion": "^2.0.1",
@@ -14,12 +16,13 @@
         "cordova-plugin-geolocation": "^4.0.1",
         "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
-        "cordova-plugin-ionic-webview": "^2.2.3",
+        "cordova-plugin-ionic-webview": "^2.2.5",
         "cordova-plugin-itunesfilesharing": "0.0.2",
         "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-zip": "^3.1.0",
         "cordova-sqlite-storage": "2.6.0",
         "gulp-clean-css": "^3.10.0",
         "gulp-concat": "^2.6.1",
@@ -64,9 +67,11 @@
             "cordova-plugin-itunesfilesharing": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-sqlite-storage": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-zip": {},
-            "cordova-sqlite-storage": {}
+            "org.strabospot.clipboard": {}
         }
     }
 }
