--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "1.6.1",
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
-        "@ionic/v1-toolkit": "^1.0.12",
         "cordova-android": "7.1.4",
         "cordova-ios": "4.5.5",
         "cordova-plugin-camera": "^4.0.3",
@@ -32,6 +31,7 @@
     "devDependencies": {
         "@ionic/cli-plugin-cordova": "1.6.2",
         "@ionic/cli-plugin-ionic1": "2.1.1",
+        "@ionic/v1-toolkit": "1.0.15",
         "angular-mocks": "^1.7.5",
         "bower": "^1.3.3",
         "eslint": "^1.10.3",
