--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
         "cordova-plugin-device-orientation": "^2.0.1",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
-        "cordova-plugin-filepath": "^1.4.2",
+        "cordova-plugin-filepath": "1.5.1",
         "cordova-plugin-geolocation": "^4.0.1",
         "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
-        "cordova-plugin-ionic-webview": "^2.2.5",
+        "cordova-plugin-ionic-webview": "3.1.1",
         "cordova-plugin-itunesfilesharing": "0.0.2",
         "cordova-plugin-network-information": "^2.0.1",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -63,7 +63,9 @@
             "cordova-plugin-geolocation": {},
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-webview": {
+                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+            },
             "cordova-plugin-itunesfilesharing": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-splashscreen": {},
