--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
     "dependencies": {
         "cordova-android": "7.1.4",
+        "cordova-browser": "5.0.4",
         "cordova-ios": "4.5.5",
         "cordova-plugin-camera": "^4.0.3",
         "cordova-plugin-device": "^2.0.2",
@@ -51,7 +52,11 @@
         "ionic_generate_source_map": true
     },
     "cordova": {
-        "platforms": [],
+        "platforms": [
+            "android",
+            "ios",
+            "browser"
+        ],
         "plugins": {
             "cordova-plugin-camera": {},
             "cordova-plugin-device": {},
