--- a/package.json
+++ b/package.json
@@ -1,84 +1,83 @@
 {
-    "name": "StraboSpot",
-    "version": "1.7.9",
-    "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
-    "dependencies": {
-        "cordova-android": "7.1.4",
-        "cordova-browser": "5.0.4",
-        "cordova-ios": "4.5.5",
-        "cordova-plugin-camera": "^4.0.3",
-        "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-device-motion": "^2.0.1",
-        "cordova-plugin-device-orientation": "^2.0.1",
-        "cordova-plugin-file": "^6.0.1",
-        "cordova-plugin-file-transfer": "^1.7.1",
-        "cordova-plugin-filepath": "1.5.1",
-        "cordova-plugin-geolocation": "^4.0.1",
-        "cordova-plugin-inappbrowser": "^3.0.0",
-        "cordova-plugin-ionic-keyboard": "2.1.3",
-        "cordova-plugin-ionic-webview": "2.3.2",
-        "cordova-plugin-itunesfilesharing": "0.0.2",
-        "cordova-plugin-network-information": "^2.0.1",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-plugin-zip": "^3.1.0",
-        "cordova-sqlite-storage": "3.2.0",
-        "gulp-clean-css": "^3.10.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-rename": "^1.4.0",
-        "org.strabospot.clipboard": "https://github.com/StraboSpot/clipboard_plugin"
-    },
-    "devDependencies": {
-        "@ionic/cli-plugin-cordova": "1.6.2",
-        "@ionic/cli-plugin-ionic1": "2.1.1",
-        "@ionic/v1-toolkit": "1.0.15",
-        "angular-mocks": "^1.7.5",
-        "bower": "^1.3.3",
-        "eslint": "^1.10.3",
-        "eslint-config-angular": "^0.4.0",
-        "eslint-plugin-angular": "^0.12.0",
-        "gulp": "^3.9.1",
-        "gulp-sass": "^4.0.2",
-        "gulp-util": "^2.2.14",
-        "jasmine-core": "^2.3.4",
-        "karma": "^0.13.10",
-        "karma-chrome-launcher": "^0.2.1",
-        "karma-firefox-launcher": "^0.1.6",
-        "karma-jasmine": "^0.3.6",
-        "shelljs": "^0.3.0"
-    },
-    "config": {
-        "ionic_generate_source_map": true
-    },
-    "cordova": {
-        "platforms": [
-            "android",
-            "ios",
-            "browser"
-        ],
-        "plugins": {
-            "cordova-plugin-camera": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-device-motion": {},
-            "cordova-plugin-device-orientation": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-filepath": {},
-            "cordova-plugin-file-transfer": {},
-            "cordova-plugin-geolocation": {},
-            "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-ionic-webview": {
-              "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-            },
-            "cordova-plugin-itunesfilesharing": {},
-            "cordova-plugin-network-information": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-zip": {},
-            "org.strabospot.clipboard": {}
-        }
+  "name": "StraboSpot",
+  "version": "1.8.2",
+  "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
+  "dependencies": {
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-device-orientation": "^2.0.1",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filepath": "1.5.1",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
+    "cordova-plugin-ionic-keyboard": "2.1.3",
+    "cordova-plugin-ionic-webview": "^2.5.1",
+    "cordova-plugin-itunesfilesharing": "0.0.2",
+    "cordova-plugin-network-information": "^2.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-zip": "^3.1.0",
+    "cordova-sqlite-storage": "^3.2.0",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.4.0",
+    "org.strabospot.clipboard": "https://github.com/StraboSpot/clipboard_plugin",
+    "strabo-plugin-clipboard": "git+https://github.com/StraboSpot/clipboard_plugin.git"
+  },
+  "devDependencies": {
+    "@ionic/cli-plugin-cordova": "1.6.2",
+    "@ionic/cli-plugin-ionic1": "2.1.1",
+    "@ionic/v1-toolkit": "1.0.15",
+    "angular-mocks": "^1.7.5",
+    "bower": "^1.3.3",
+    "cordova-sqlite-evcore-extbuild-free": "^0.9.10",
+    "eslint": "^1.10.3",
+    "eslint-config-angular": "^0.4.0",
+    "eslint-plugin-angular": "^0.12.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-util": "^2.2.14",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.6",
+    "shelljs": "^0.3.0"
+  },
+  "config": {
+    "ionic_generate_source_map": true
+  },
+  "cordova": {
+    "platforms": [
+      "browser"
+    ],
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-device-orientation": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-itunesfilesharing": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-zip": {},
+      "org.strabospot.clipboard": {},
+      "cordova-sqlite-evcore-extbuild-free": {}
     }
+  }
 }
