--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.11.0",
   "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
   "dependencies": {
+    "cordova-android": "^8.1.0",
     "cordova-browser": "5.0.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -21,7 +22,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-zip": "^3.1.0",
-    "cordova-sqlite-storage": "^3.2.0",
+    "cordova-sqlite-storage": "^3.4.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
