--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
   "dependencies": {
     "cordova-android": "^8.1.0",
-    "cordova-browser": "5.0.4",
-    "cordova-plugin-camera": "^4.0.3",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-browser": "^6.0.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-device-orientation": "^2.0.1",
-    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-filepath": "1.5.1",
-    "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "2.1.3",
-    "cordova-plugin-ionic-webview": "^2.5.1",
+    "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-inappbrowser": "^3.2.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^2.5.3",
     "cordova-plugin-itunesfilesharing": "0.0.2",
-    "cordova-plugin-network-information": "^2.0.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-network-information": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-zip": "^3.1.0",
-    "cordova-sqlite-storage": "^3.4.0",
+    "cordova-sqlite-storage": "^3.4.1",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
@@ -32,24 +32,19 @@
   "devDependencies": {
     "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-ionic1": "2.1.1",
-    "@ionic/v1-toolkit": "1.0.15",
-    "angular-mocks": "^1.7.5",
+    "@ionic/v1-toolkit": "^3.1.1",
+    "angular-mocks": "^1.7.9",
     "bower": "^1.8.8",
-    "cordova-sqlite-evcore-extbuild-free": "^0.9.10",
-    "eslint": ">=4.18.2",
-    "eslint-config-angular": "^0.4.0",
+    "cordova-sqlite-evcore-extbuild-free": "^0.12.0",
+    "eslint": "^6.8.0",
+    "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^0.12.0",
     "extend": ">=3.0.2",
     "fstream": ">=1.0.12",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
     "gulp-util": "^2.2.14",
-    "handlebars": ">=4.0.14",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.10",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.6",
+    "handlebars": "^4.7.3",
     "lodash": ">=4.17.13",
     "lodash.merge": ">=4.6.2",
     "lodash.mergewith": ">=4.6.2",
@@ -57,9 +52,9 @@
     "minimatch": ">=3.0.2",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1",
-    "shelljs": "^0.3.0",
+    "shelljs": "^0.8.3",
     "tar": ">=2.2.2",
-    "ws": ">=3.3.1"
+    "ws": "^7.2.3"
   },
   "config": {
     "ionic_generate_source_map": true
