--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-ionic1": "2.1.1",
-    "@ionic/v1-toolkit": "^3.1.1",
+    "@ionic/v1-toolkit": "^3.1.2",
     "angular-mocks": "^1.7.9",
     "bower": "^1.8.8",
     "cordova-sqlite-evcore-extbuild-free": "^0.12.0",
@@ -43,14 +43,14 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
     "gulp-util": "^2.2.14",
-    "handlebars": "^4.7.3",
+    "handlebars": "^4.7.6",
     "lodash": ">=4.17.13",
     "lodash.merge": ">=4.6.2",
     "lodash.mergewith": ">=4.6.2",
     "lodash.template": ">=4.5.0",
     "minimatch": ">=3.0.2",
     "mixin-deep": ">=1.3.2",
-    "set-value": ">=2.0.1",
+    "set-value": "^3.0.2",
     "shelljs": "^0.8.3",
     "tar": ">=2.2.2",
     "ws": "^7.2.3"
