--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-zip": "^3.1.0",
     "cordova-sqlite-storage": "^5.0.0",
-    "gulp-clean-css": "^3.10.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "org.strabospot.clipboard": "https://github.com/StraboSpot/clipboard_plugin",
     "strabo-plugin-clipboard": "git+https://github.com/StraboSpot/clipboard_plugin.git"
   },
@@ -36,12 +36,12 @@
     "bower": "^1.8.8",
     "eslint": "^6.8.0",
     "eslint-config-angular": "^0.5.0",
-    "eslint-plugin-angular": "^0.12.0",
+    "eslint-plugin-angular": "^4.0.1",
     "extend": ">=3.0.2",
     "fstream": ">=1.0.12",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
-    "gulp-util": "^2.2.14",
+    "gulp-util": "^3.0.8",
     "handlebars": "^4.7.6",
     "lodash": ">=4.17.13",
     "lodash.merge": ">=4.6.2",
@@ -51,7 +51,7 @@
     "mixin-deep": ">=1.3.2",
     "set-value": "^3.0.2",
     "shelljs": "^0.8.3",
-    "tar": ">=2.2.2",
+    "tar": "^6.0.1",
     "ws": "^7.2.3"
   },
   "config": {
