Package & package-lock: minor changes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.5.8",
-    "cordova-plugin-geolocation": "4.0.2",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "2.5.3",
